Fixed non-selectable options, header now fixed to top and fixed problem with z-indexes

--- a/Zlatmax-gulp-build/src/scss/header.scss
+++ b/Zlatmax-gulp-build/src/scss/header.scss
@@ -6,6 +6,11 @@
 	&__top {
 		background-color: $mainDarkColor;
 		color: #fff;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		z-index: 5;
 	}
 }
 .top-header {
